--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App .box {
+  background: red;
+  width: 32px;
+  height: 32px;
 }
 
 .App-header {
@@ -24,7 +19,7 @@
   color: white;
 }
 
-.App-link {
+.App a {
   color: #61dafb;
 }
 
