--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,9 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:link,
+a:visited,
+a:hover {
+  color: black;
+  text-decoration: none;
 }
