--- a/src/Project/CSS/Home.css
+++ b/src/Project/CSS/Home.css
@@ -9,7 +9,7 @@
   border-radius: 20px;
   width: 60%;
   height: 70%;
-  background-color: black;
+  background-color: rgb(20, 22, 21);
 }
 
 .Home__main-title {
@@ -38,6 +38,7 @@
   justify-content: space-between;
   width: 100%;
   height: 7rem;
+  padding: 1rem;
 }
 
 .Home__main-content__logo img {
@@ -46,4 +47,5 @@
   height: 4rem;
   border-radius: 6px;
   margin: 1rem;
+  padding: 0.5rem;
 }
